# numina

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh
docs/: API.md  ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md
examples/: agent-example.toml  claude.md  plan-example.toml
scripts/: check_project.sh
src/: main.rs
src/cli/: agent.rs  chat.rs  collaborate.rs  config.rs  mcp.rs  mod.rs  model.rs  plan.rs
src/cli/session/: commands.rs  completer.rs  file_ref.rs  mod.rs  permission.rs  readline.rs  renderer.rs  runner.rs
src/config/: mcp.rs  mod.rs  models.rs  parser.rs  validator.rs
src/core/: chat.rs  mod.rs
src/core/agent/: act.rs  base.rs  executor.rs  memory.rs  mod.rs
src/core/collaboration/: consensus.rs  coordinator.rs  message_bus.rs  mod.rs
src/core/mcp/: client.rs  mod.rs  server.rs
src/core/models/: anthropic.rs  local.rs  mod.rs  openai.rs  provider.rs
src/core/plan/: executor.rs  mod.rs  optimizer.rs  parser.rs
src/core/skills/: mod.rs
src/core/tools/: builtin.rs  mcp.rs  mod.rs  registry.rs
src/utils/: crypto.rs  fs.rs  logger.rs  mod.rs
