[package]
name = "numina"
version = "0.1.0"
edition = "2024"
description = "Numina - AI Intelligent Agent CLI with MCP and Multi-Agent Collaboration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/numina/numina"
authors = ["Numina Team"]

[[bin]]
name = "numina"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP clients
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
hyper = "1.5"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dirs = "5.0"
config = "0.15"

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# File I/O
walkdir = "2.5"
ignore = "0.4"
glob = "0.3"

# Process management
sysinfo = "0.33"

# Terminal UI
crossterm = "0.28"
ratatui = "0.29"

# Interactive line editing (Tab completion, history)
rustyline = "14.0"
rustyline-derive = "0.10"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Password/Secret handling
secrecy = "0.10"
zeroize = "1.8"

# MCP support
jsonrpc-core = "18.0"
jsonrpc-stdio-server = "18.0"
jsonrpc-http-server = "18.0"

# WebSocket
tokio-tungstenite = "0.26"

# Rate limiting
governor = "0.7"
backoff = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
tempfile = "3.14"
mockall = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-fast]
inherits = "release"
opt-level = 2
codegen-units = 4
